Locale KCM is replaced by Formats KCM

BUG:331930
REVIEW:118063